[package]
name = "cstx-wasm"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cstx-graph = { path = "../../cstx-core/crates/cstx-graph" }
cstx-easm = { path = "../../cstx-core/crates/cstx-easm" }
wasm-bindgen = "0.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
